src/test/deca/context/invalid/new-noClass.context
new-noClass.deca:5:
